src/components/Projects/Projects.css
/* opener: set dynamic grid */
@media (min-width: 736px) {
  .project-grid {
    display: grid;
    grid-gap: 10%;
    grid-template-columns: 450px auto;
    
  }
  #katoche {
    grid-column: 1;
  }
  #portfolio {
    grid-column: 2;
  }    
  .projectImg:hover {
    transform: scale(2.0, 2.0);
  }
}

.project {
  padding:10px;
  min-width: 400px;
}

.projectImg {
  max-width:350px;
  height:250px;
  transition: transform 0.5s ease-out;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.projectTitle {
  text-align: center;
  font-family: 'Roboto Condensed', sans-serif;
  font-style:italic;
  background-color: white;
}

